# godot-multiplayer

./: .env.sample  .gitignore  README.md  compose.yaml
authentication/: .env.sample  Cargo.toml  Dockerfile  README.md
authentication/migrations/2024-02-06-171601_create_user_auth_provider_table/: down.sql  up.sql
authentication/migrations/2024-02-06-171601_create_user_table/: down.sql  up.sql
authentication/src/: config.rs  db.rs  lib.rs  main.rs  oauth2.rs  schema.rs  test.rs  user.rs
authentication/src/auth/: identity.rs  mod.rs  oauth2.rs  provider.rs  refresh.rs  token.rs
authentication/src/auth/game_center/: id_validation.rs  mod.rs  sign_in.rs  verification.rs
authentication/src/auth/oauth2/: google_provider.rs  google_user_info_api.rs  mod.rs  sign_in.rs
authentication/src/auth/play_games/: exchange_auth_code.rs  mod.rs  sign_in.rs
authentication/src/auth/play_games/play_games_api/: mod.rs  players.rs
authentication/src/auth/refresh/: mod.rs  session.rs
authentication/src/auth/steam/: mod.rs  sign_in.rs
authentication/src/auth/steam/steam_api/: mod.rs  user.rs  user_auth.rs
authentication/src/user/: me.rs  mod.rs
export/: .gitignore
export/server/: Dockerfile
export/web/: serve.py
game-server-manager/: .env.sample  Cargo.toml  Dockerfile  README.md
game-server-manager/src/: config.rs  lib.rs  main.rs
game-server-manager/src/game/: get.rs  kill.rs  list.rs  mod.rs  spawn.rs
matchmaking/: .env.sample  Cargo.toml  Dockerfile  README.md  index.html
matchmaking/src/: config.rs  identity.rs  lib.rs  main.rs  player.rs  session.rs
matchmaking/src/game_server_manager/: mod.rs
matchmaking/src/queue/: join.rs  leave.rs  mod.rs  solo.rs
matchmaking/src/websocket/: mod.rs  server.rs  session.rs
nginx/: README.md
nginx/templates/: authentication.nginx  game_servers.nginx  services.nginx  web_client.nginx
project/: .gitignore  env.sample.gd  export_presets.cfg  game_root.tscn  icon.svg.import  program.gd  project.godot  root.tscn
project/addons/godot-optional/: README.md  enum_dict.gd  enum_struct.gd  enum_variant.gd  option.gd
project/addons/godot-play-games-services/: export_plugin.gd  godot_play_games_services_dock.tscn  play_games_services_core.gd  plugin.cfg
project/addons/netfox/: interpolators.gd  netfox.gd  network-time-synchronizer.gd  network-time.gd  state-synchronizer.gd
project/android/: README.md
project/authentication/: README.md  apple_game_center_authentication.gd  authentication.gd  authentication.tscn  google_play_games_authentication.gd  open_id_authentication.gd  steam_authentication.gd
project/authentication/providers/: apple_game_center_auth_provider.gd  apple_game_center_authentication_provider.gd  auth_provider.gd  authentication_provider.gd  google_play_games_auth_provider.gd  google_play_games_authentication_provider.gd  open_id_authentication_provider.gd  steam_auth_provider.gd  steam_authentication_provider.gd  web_oauth2_auth_provider.gd  web_oauth2_authentication_provider.gd
project/game/: game.gd  game.tscn  game_client.gd  game_network.gd  game_server.gd
project/game/player/: player.gd  player.tscn  player_controller.gd  player_controller.tscn  player_id.gd  player_id.tscn
project/ios/: README.md
project/main/: main.gd  main.tscn
project/multiplayer/: README.md  game_client.gd  game_network.gd  game_server.gd  id_provider.gd  network_debug_overlay.gd  network_debug_overlay.tscn  network_synchronized.gd  network_verified_state.gd  network_verifier.gd  synchronized.gd  verifiers.gd
project/player/: player.gd  player.tscn  player_controller.gd  player_controller.tscn  player_input.gd  player_state_verifier.gd
project/screens/: debug_auth.gd  debug_auth.tscn  home.gd  home.tscn
project/services/: README.md  apple_game_center_service.gd  google_play_games_service.gd  service.gd  service_manager.gd  steam_service.gd  web_oauth2_service.gd
project/utils/: history_recorder.gd  http_utils.gd  logger.gd  object_serializer.gd  rpc_utils.gd  symbol.gd
project/world/: game_world.gd  game_world.tscn  world.tscn
server/: README.md  example.nginx
server/nginx/: web_client.nginx
(+126 files in other folders)
