[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
actix-web-httpauth = "0.8.1"
async-trait = "0.1.77"
base64 = "0.21.7"
bb8 = "0.8.3"
chrono = { version = "0.4.33", features = ["serde"] }
diesel = { version = "2.1.4", features = ["chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_async_migrations = "0.12.0"
dotenvy = "0.15.7"
env_logger = "0.11.1"
is_empty = "0.2.0"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
openssl = "0.10.63"
paste = "1.0.14"
rand_core = { version = "0.6.4", features = ["std"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
