[package]
name = "game-server-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
async-trait = "0.1.77"
base64 = "0.21.7"
chrono = { version = "0.4.33", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "serde"] }
