[package]
name = "matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
chrono = { version = "0.4.34", default-features = false, features = ["serde", "std"] }
dotenvy = "0.15.7"
env_logger = "0.11.1"
jsonwebtoken = "9.2.0"
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v4", "serde", "fast-rng"] }
